[gd_scene load_steps=6 format=3 uid="uid://splash001"]

[ext_resource type="Script" path="res://scripts/splash_screen.gd" id="1_1"]
[ext_resource type="FontFile" uid="uid://boipgfyx6mikt" path="res://fonts/monogram-extended.ttf" id="2_1"]
[ext_resource type="Shader" path="res://shaders/dither_shader.gdshader" id="3_1"]
[ext_resource type="AudioStream" path="res://sounds/splash.mp3" id="4_1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1"]
shader = ExtResource("3_1")
shader_parameter/dither_strength = 0.15
shader_parameter/contrast = 1.3

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DitherLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="DitherShader" type="ColorRect" parent="DitherLayer"]
material = SubResource("ShaderMaterial_1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="Content"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 72
text = "the onironaut"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="Content"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 24
text = "type to dream"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Content"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="PlayButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 48
text = "[PLAY]"
flat = true

[node name="QuitButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 48
text = "[QUIT]"
flat = true

[node name="Credits" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 20
text = "1-bit typing survival"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SplashMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1")
autoplay = true

[connection signal="mouse_entered" from="Content/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="pressed" from="Content/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="Content/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Content/QuitButton" to="." method="_on_quit_button_pressed"]
